v1.2 update cart
